--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "basiclightbox": "^5.0.4"
+    "basiclightbox": "^5.0.4",
+    "he": "^1.2.0"
   }
 }
