--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "watcherGlob": "**"
   },
   "devDependencies": {
+    "notiflix": "^3.0.1",
     "parcel-bundler": "^1.12.5",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
