--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "basiclightbox": "^5.0.4",
-    "he": "^1.2.0"
+    "he": "^1.2.0",
+    "tui-pagination": "^3.4.1"
   }
 }
